[package]
name = "password-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
clap = { version = "4.5.7", features = ["derive"] }
hex = "0.4.3"
pbkdf2 = "0.12.2"
rand_core = "0.6.4"
rpassword = "7.3.1"
sha2 = "0.10.8"
shlex = "1.3.0"
